# FastAPI---Strawberry

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
docs/: GRAPHQL_FASTAPI_STRAWBERRY.md
src/app/: main.py
src/app/core/: config.py  database.py  init_settings.py
src/app/db/: seed.py
src/app/graphql/: mutations.py  queries.py  schema.py
src/app/graphql/types/: __init__.py
src/app/models/: __init__.py  category.py  provider.py  tool.py
src/app/rest/: router.py  schemas.py
tests/: benchmark.py  conftest.py  run_benchmarks.py  test_graphql.py
